# protoCore

./: .gitignore  API_COMPLETENESS_AUDIT_2026.md  AUDIT_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  COMPREHENSIVE_TECHNICAL_AUDIT_2026.md  CTestConfig.cmake  CTestTestfile.cmake  DESIGN.md  DOCUMENTATION.md  GC_STRESS_TEST_FIX_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN_2026.md  JIT_IMPACT_ANALYSIS_2026.md  LICENSE  PROTOCORE_BUFFER_API_RESOLUTION.md  README.md  README2.md  RUNTIME_STRATEGY_2026.md  TECHNICAL_ANALYSIS.md  check_offset  check_offset.cpp  concurrent_append_benchmark  immutable_sharing_benchmark  next_steps.md
build-dbg/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_asan/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cache_timing_benchmark  cmake_install.cmake  concurrent_append_benchmark  immutable_sharing_benchmark  libprotoCore.so.1  list_benchmark  microbenchmark_final  object_access_benchmark  sparse_list_benchmark  string_concat_benchmark
build_check/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  concurrent_append_benchmark  immutable_sharing_benchmark  libprotoCore.so.1.0.0
build_nosurv/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cache_timing_benchmark  cmake_install.cmake  concurrent_append_benchmark  immutable_sharing_benchmark  libprotoCore.so.1.1.0  list_benchmark  microbenchmark_final  object_access_benchmark  sparse_list_benchmark  string_concat_benchmark
build_off/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cache_timing_benchmark  cmake_install.cmake  concurrent_append_benchmark  immutable_sharing_benchmark  list_benchmark  microbenchmark_final  object_access_benchmark  sparse_list_benchmark  string_concat_benchmark
build_release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cache_timing_benchmark  cmake_install.cmake  concurrent_append_benchmark  immutable_sharing_benchmark  libprotoCore.so.1.1.0  list_benchmark  microbenchmark_final  object_access_benchmark  sparse_list_benchmark  string_concat_benchmark
core/: Cell.cpp  Double.cpp  Integer.cpp  LargeInteger.cpp  ModuleCache.cpp  ModuleCache.h  ModuleProvider.cpp  ModuleProvider.h  ModuleResolver.cpp  ParentLink.cpp  Proto.cpp  ProtoByteBuffer.cpp  ProtoContext.cpp  ProtoExternalBuffer.cpp  ProtoExternalPointer.cpp  ProtoList.cpp  ProtoMethodCell.cpp  ProtoMultiset.cpp  ProtoObject.cpp  ProtoObjectCell.cpp  ProtoRootSet.cpp  ProtoSet.cpp  ProtoSpace.cpp  ProtoSparseList.cpp  ProtoString.cpp  ProtoTuple.cpp  ProviderRegistry.cpp  SymbolTable.cpp  Thread.cpp
debug/: BigCell.d  Cell.d  ParentLink.d  Proto.d  ProtoByteBuffer.d  ProtoContext.d  ProtoExternalPointer.d  ProtoList.d  ProtoMethodCell.d  ProtoObjectCell.d  ProtoSpace.d  ProtoSparseList.d  ProtoString.d  ProtoTuple.d  Thread.d  test_proto.d
depend/: Cell.d  ParentLink.d  Proto.d  ProtoByteBuffer.d  ProtoContext.d  ProtoExternalPointer.d  ProtoList.d  ProtoMethodCell.d  ProtoObjectCell.d  ProtoSpace.d  ProtoSparseList.d  ProtoString.d  ProtoTuple.d  Thread.d
docs/: DESIGN_link.rst  Doxyfile  Doxyfile.in  GarbageCollector.md  INSTALLATION.md  MODULE_DISCOVERY.md  MUTABLE_SHARDING_AND_CACHE_REFACTOR.md  Makefile  NEXT_STEPS.md  README.md  ROPES_AS_PROTOTUPLE.md  STW_ELIMINATION_RESEARCH.md  TESTING.md  TechnicalAudit.md  USER_GUIDE_UMD_MODULES.md  commercial_potential.rst  conceptual_introduction.rst  conf.py  education_potential.md  execution_model.rst  index.rst  numerics.rst  project_overview.rst  target_applications.rst
headers/: proto.h  protoCore.h  proto_internal.h
include/: proto.h  proto_internal.h
perf_logs/: after-pad-24-to-32.txt  after-pad-r10.txt  baseline-r10.txt  baseline.txt  cache_timing-after-mut-32.txt  cache_timing-baseline-32entry.txt  hash_comparison.txt  hash_quality_v1_shift.txt  mutable_after_pad.txt  mutable_after_pad_v2.txt  mutable_baseline.txt  mutable_baseline_v2.txt
performance/: cache_pressure_benchmark.cpp  cache_timing_benchmark.cpp  concurrent_append_benchmark.cpp  hash_quality_benchmark.cpp  immutable_sharing_benchmark.cpp  list_benchmark.cpp  microbenchmark_final.cpp  mutable_access_benchmark.cpp  object_access_benchmark.cpp  sparse_list_benchmark.cpp  string_concat_benchmark.cpp
proto/: Makefile
scripts/: ci_run_tests.sh  coverage.sh  run_tests.sh
test/: AllocationLimitTests.cpp  AttributeCasTests.cpp  CMakeLists.txt  CTestTestfile.cmake  ConcurrentMarkSafetyTests.cpp  ContextTests.cpp  GCStressTests.cpp  GCSurvivorRechainTests.cpp  Makefile  MultipleInheritanceTests.cpp  NumericTests.cpp  SwarmTests.cpp  UnmanagedRegionTests.cpp  cmake_install.cmake  proto_tests[1]_include.cmake  proto_tests[1]_tests.cmake  test_list.cpp  test_module_discovery.cpp  test_object.cpp  test_primitives.cpp  test_proto.cpp  test_root_set.cpp  test_sets.cpp  test_smalllist.cpp  test_smallsparselist.cpp  test_sparselist.cpp  test_string.cpp  test_tuple.cpp
xml/: 01__building__a__repl_8md.xml  01__garbage__collector_8md.xml  01__quick__start_8md.xml  02__building__on__proto_8md.xml  02__mutability__model_8md.xml  02__transpiling__python_8md.xml  03__contributing_8md.xml  03__object__model_8md.xml  04__ffi__and__integration_8md.xml  CMakeCCompilerId_8c.xml  Cell_8cpp.xml  Cell_8cpp_8o_8d.xml  Cell_8d.xml  ContextTests_8cpp.xml  DESIGN_8md.xml  Double_8cpp.xml  Double_8cpp_8o_8d.xml  Doxyfile.xml  GCStressTests_8cpp.xml  GCStressTests_8cpp_8o_8d.xml  GarbageCollector_8md.xml  Integer_8cpp.xml  Integer_8cpp_8o_8d.xml  LICENSE_8md.xml  LargeInteger_8cpp.xml  LargeInteger_8cpp_8o_8d.xml  NumericTests_8cpp.xml  ParentLink_8cpp.xml  ParentLink_8cpp_8o_8d.xml  ParentLink_8d.xml  ProtoByteBuffer_8cpp.xml  ProtoByteBuffer_8cpp_8o_8d.xml  ProtoByteBuffer_8d.xml  ProtoContext_8cpp.xml  ProtoContext_8cpp_8o_8d.xml  ProtoContext_8d.xml  ProtoExternalPointer_8cpp.xml  (+8632 more)
(+7341 files in other folders)
